# gge

./: .gitignore  CMakeLists.txt  README.MD
res/: main.glslf  main.glslv
src/: engine.cpp
src/graphics/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VoxelRenderer.cpp  VoxelRenderer.h
src/lighting/: Lighting.cpp  Lighting.h  Lightmap.cpp  Lightmap.h
src/loaders/: PNGLoading.cpp  PNGLoading.h
src/voxels/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  voxel.h
src/window/: Camera.cpp  Camera.h  Events.cpp  Events.h  Window.cpp  Window.h
